add means to easily set reward function in environment

--- a/src/anymal_gym.ipynb
+++ b/src/anymal_gym.ipynb
@@ -1712,7 +1712,7 @@
        "            };\n",
        "\n",
        "            // May be overwritten externally by python in interactive mode\n",
-       "            var ws_path = &quot;/api/kernels/079ced63-4870-491c-aa47-730e49743bca/channels?token=a44e1f3d9198a0e3c6a6a43454c5f118e4dc7e0e7884c456&quot;;\n",
+       "            var ws_path = &quot;/api/kernels/a10610f1-a025-43d4-8756-6ad3ca3a41f6/channels?token=65b91df966f67a6c4996f4f8635b0706447901fec6855484&quot;;\n",
        "\n",
        "            // Connect the viewer to the existing server, though direct ZMP\n",
        "            // websocket in standalone browser or though kernel communication\n",
@@ -2034,6 +2034,57 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Calling 'step' even though this environment has already returned done = True whereas terminal reward is enabled. Please call `reset` to avoid further undefined behavior.\u001b[0m\n",
+      "/home/timwilliamson/.local/lib/python3.8/site-packages/jiminy_py/viewer/meshcat/meshcat_visualizer.py:111: FutureWarning: The behavior of this method will change in future versions.  Use specific 'len(elem)' or 'elem is not None' test instead.\n",
+      "  if img_lib_element:\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10, -10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Extends the ANYmal environment allowing for easy setting of reward functions\n",
+    "class ConfigurableANYmal(ANYmalJiminyEnv):\n",
+    "    \n",
+    "    def compute_reward(self, info):\n",
+    "        return self.reward_function(self,info)\n",
+    "    \n",
+    "    def set_reward_function(self, reward_function):\n",
+    "        self.reward_function = reward_function\n",
+    "\n",
+    "        \n",
+    "def reward_fn(self, info):\n",
+    "    return -10 if self.is_done() else 1\n",
+    "\n",
+    "env = ConfigurableANYmal()\n",
+    "env.set_reward_function(reward_fn)\n",
+    "env.reset()\n",
+    "\n",
+    "\n",
+    "rewards = []\n",
+    "for i in range(500):\n",
+    "  _,reward,_,_ = env.step()\n",
+    "  rewards.append(reward)\n",
+    "env.stop()\n",
+    "env.simulator.close()\n",
+    "\n",
+    "print(rewards)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "colab": {
@@ -2117,7 +2168,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
