DDPG and TD3 agent

--- a/src/DDPGAgentForGymAnt_Linghao.ipynb
+++ b/src/DDPGAgentForGymAnt_Linghao.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "65197c51",
+   "id": "133758c9",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b79fbf8d",
+   "id": "9572fb67",
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5e8c1232",
+   "id": "12d4590e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "12450158",
+   "id": "2856967d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3aa56d90",
+   "id": "0a84eb6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9bddf166",
+   "id": "d5ab6de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4e156944",
+   "id": "753e6d92",
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "43b93f67",
+   "id": "2a69bcd6",
    "metadata": {},
    "outputs": [
     {
@@ -567,8 +567,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "id": "2025a322",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1.], dtype=float32)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.action_space.high"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "3e3cd3e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tt1 = np.array([4])\n",
+    "tt2 = np.array([6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "ab6c4b12",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.min([tt1, tt2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "553f3c5d",
+   "id": "54a62cb8",
    "metadata": {},
    "outputs": [],
    "source": []
