early learning, saving best model and evaluation mode

--- a/src/TD3AgentForGymAnt_Linghao.ipynb
+++ b/src/TD3AgentForGymAnt_Linghao.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "af4ddba3",
+   "execution_count": 77,
+   "id": "0ef698fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,6 +148,9 @@
     "    \n",
     "    def isFull(self):\n",
     "        return len(self.memory)==self.size\n",
+    "    \n",
+    "    def getSize(self):\n",
+    "        return len(self.memory)\n",
     "\n",
     "\n",
     "## ------------------- Target policy smoothing ---------------- ## \n",
@@ -173,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a168ebd9",
+   "execution_count": 90,
+   "id": "264b3df6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,7 +296,8 @@
     "        else:\n",
     "            raise ValueError(\"More replay memory needed\")\n",
     "    \n",
-    "    def getAction(self, states):\n",
+    "    ## Add option to discard noise in eval mode\n",
+    "    def getAction(self, states, eval = False):\n",
     "        if self.gpu:\n",
     "            states = torch.cuda.FloatTensor(states)\n",
     "        else:\n",
@@ -302,7 +306,9 @@
     "        action = self.actor(states).detach().cpu().numpy()\n",
     "        \n",
     "        # Action selection without noise clip\n",
-    "        action = self.pSmooth.getAction(action, noiseClip=False)\n",
+    "        if not eval:\n",
+    "            action = self.pSmooth.getAction(action, noiseClip=False)\n",
+    "            \n",
     "        return action\n",
     "    \n",
     "    def cuda(self):\n",
@@ -346,38 +352,50 @@
     "        \n",
     "    def saveModel(self, path):\n",
     "        torch.save(self.actor.state_dict(),f'{path}/actor.pkl')\n",
-    "        torch.save(self.critic1.state_dict(),f'{path}/critic.pkl')\n",
-    "    \n",
+    "        torch.save(self.targetActor.state_dict(),f'{path}/targetActor.pkl')\n",
+    "        \n",
+    "        torch.save(self.critic1.state_dict(),f'{path}/critic1.pkl')\n",
+    "        torch.save(self.critic2.state_dict(),f'{path}/critic2.pkl')\n",
+    "        \n",
+    "        torch.save(self.targetCritic1.state_dict(),f'{path}/targetCritic1.pkl')\n",
+    "        torch.save(self.targetCritic2.state_dict(),f'{path}/targetCritic2.pkl')    \n",
+    "        \n",
     "    def loadModel(self, path):\n",
     "        self.actor.load_state_dict(torch.load(f'{path}/actor.pkl'))\n",
-    "        self.critic.load_state_dict(torch.load(f'{path}/critic.pkl'))"
+    "        self.targetActor.load_state_dict(torch.load(f'{path}/targetActor.pkl'))\n",
+    "        \n",
+    "        self.critic1.load_state_dict(torch.load(f'{path}/critic1.pkl'))\n",
+    "        self.critic2.load_state_dict(torch.load(f'{path}/critic2.pkl'))\n",
+    "        \n",
+    "        self.targetCritic1.load_state_dict(torch.load(f'{path}/targetCritic1.pkl'))\n",
+    "        self.targetCritic2.load_state_dict(torch.load(f'{path}/targetCritic2.pkl'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "adff6a54",
+   "execution_count": 91,
+   "id": "bc5d3ae3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def train(agent, env, epochs, replayMemorySize, printEvery = 100, savePath=None):\n",
+    "def train(agent, env, epochs, replayMemorySize, updateStart, printEvery = 100, savePath=None):\n",
     "\n",
     "    # ## Training Loop\n",
     "    try:\n",
     "        for e in range(epochs):\n",
     "            state = env.reset()    \n",
     "            episodeR = 0\n",
-    "            \n",
+    "            t = 0\n",
     "            # Training loop for each episode\n",
     "            while True:\n",
-    "                t = 0\n",
+    "                \n",
     "                # Fill in the replay memory\n",
     "                action = agent.getAction(state)\n",
     "                stateNext, reward, terminated, truncated, info = env.step(action)\n",
     "                agent.rMemory.addMemory((state, action, np.array([reward]), stateNext, np.array([terminated])))\n",
     "\n",
-    "                ## Update policy\n",
-    "                if agent.rMemory.isFull(): \n",
+    "                ## Update policy when memory is ready\n",
+    "                if agent.rMemory.getSize() > updateStart: \n",
     "                    agent.updatePolicy(t)\n",
     "                    t+=1\n",
     "\n",
@@ -393,8 +411,10 @@
     "            \n",
     "            if (e+1)%printEvery == 0:\n",
     "                print(f\"Episode {e+1}: reward: {episodeR}, Avg: {rewardAvg[-1]}\")\n",
-    "\n",
-    "        if savePath!=None:\n",
+    "        \n",
+    "        ## Only save model if reward increased\n",
+    "        if savePath!=None and (rewardTracking[-1] > rewardTracking[-2]):\n",
+    "            \n",
     "            agent.saveModel(savePath)\n",
     "    \n",
     "    ## In case looping for too long\n",
@@ -407,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8ae44a94",
+   "id": "14380ea6",
    "metadata": {},
    "outputs": [
     {
@@ -509,14 +529,14 @@
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize)\n",
     "agent.trainMode()\n",
-    "trackR, avgR = train(agent, env, epochs=epochs, replayMemorySize = replayMemorySize, printEvery=printE, savePath=path)\n",
+    "trackR, avgR = train(agent, env, epochs=epochs, replayMemorySize = replayMemorySize, updateStart = 1000, printEvery=printE, savePath=path)\n",
     " \n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8e29ad24",
+   "id": "32659789",
    "metadata": {},
    "outputs": [
     {
@@ -549,8 +569,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "edaa106f",
+   "execution_count": 110,
+   "id": "b2d7356b",
    "metadata": {},
    "outputs": [
     {
@@ -562,15 +582,30 @@
     }
    ],
    "source": [
-    "newEnv = gym.make('Ant-v4', render_mode = 'human', new_step_api = True)\n",
+    "# import gym\n",
+    "# from gym.wrappers.monitoring.video_recorder import VideoRecorder\n",
     "\n",
-    "agent.evalMode()\n",
+    "agentEval = TD3Agent(env.action_space,\n",
+    "                (observationNum, 256, 128, actionNum), \n",
+    "                (totalNum, 256, 128, actionNum), \n",
+    "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
+    "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize)\n",
+    "agentEval.loadModel('/home/linghao/Desktop/TD3/')\n",
+    "agentEval.evalMode()\n",
+    "\n",
+    "\n",
+    "newEnv =  gym.make('Ant-v4', render_mode = 'human', new_step_api = True)\n",
     "observation = newEnv.reset()\n",
+    "\n",
+    " \n",
+    "# video_recorder = VideoRecorder(newEnv, '/home/linghao/Desktop/Ant.mp4', enabled=True)\n",
     "\n",
     "R = 0\n",
     "\n",
-    "for _ in range(10000):\n",
-    "    observation, reward, terminated, truncated, info = newEnv.step(agent.getAction(observation))\n",
+    "for _ in range(1000):\n",
+    "#     video_recorder.capture_frame()\n",
+    "    observation, reward, terminated, truncated, info = newEnv.step(agentEval.getAction(observation, eval = True))\n",
+    "    \n",
     "    R += reward\n",
     "    \n",
     "    if terminated:\n",
@@ -580,13 +615,15 @@
     "        print('Outbound')\n",
     "        break\n",
     "    else:\n",
-    "        continue"
+    "        continue\n",
+    "# video_recorder.close()\n",
+    "# video_recorder.enabled = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "50495cea",
+   "execution_count": 111,
+   "id": "c416a9d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,17 +632,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "17221bef",
+   "execution_count": 112,
+   "id": "eb84b1e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "762.8229182473037"
+       "207.50872580641894"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -617,10 +654,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3f9b30c",
+   "id": "649c01b6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a"
+   ]
   }
  ],
  "metadata": {
