--- a/src/TD3AgentForANYmal_customised_reward.ipynb
+++ b/src/TD3AgentForANYmal_customised_reward.ipynb
@@ -3171,7 +3171,7 @@
     "rewardAvg = []\n",
     "replayMemorySize = 5000\n",
     "printE = 250\n",
-    "path = '/home/linghao/Desktop/'\n",
+    "path = './'\n",
     "updateStart = 1000\n",
     "policyDelay = 3\n",
     "## Initialise TD3 agent\n",
@@ -3182,40 +3182,11 @@
     "                (totalNum, 256, 128, actionNum), \n",
     "                actorLRate = 0.00001, criticLRate = 0.00001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "# agent.loadModel('/home/linghao/Desktop/TD3_anymal_stable/')\n",
+    " \n",
     "agent.trainMode()\n",
     "trackR, avgR = train(agent, env, epochs=epochs, replayMemorySize = replayMemorySize, updateStart = updateStart, printEvery=printE, savePath=path)\n",
     " \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "938022e6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib\n",
-    "[trackR, avgR] =  joblib.load('/home/linghao/Desktop/TD3_anymal_highest_200k/td3_200k.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "fee4fa84",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "agent.saveModel(path = path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8f91c018",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -3275,7 +3246,7 @@
     "rewardAvg = []\n",
     "replayMemorySize = 5000\n",
     "printE = 250\n",
-    "path = '/home/linghao/Desktop/'\n",
+    "path = './'\n",
     "updateStart = 1000\n",
     "policyDelay = 3\n",
     "\n",
@@ -3295,7 +3266,7 @@
     "                (totalNum, 256,128,actionNum), \n",
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "agent1.loadModel('/home/linghao/Desktop/TD3_anymal_200k_training/')\n",
+    "agent1.loadModel('./')\n",
     "agent1.evalMode()\n",
     "\n",
     "\n",
@@ -3429,7 +3400,7 @@
     "rewardAvg = []\n",
     "replayMemorySize = 10000\n",
     "printE = 10\n",
-    "path = '/home/linghao/Desktop/'\n",
+    "path = './'\n",
     "updateStart = 5000\n",
     "policyDelay = 4\n",
     "## Initialise TD3 agent\n",
@@ -3443,7 +3414,7 @@
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
     "\n",
-    "agentEval.loadModel('/home/linghao/Desktop/TD3_anymal_200k_training/')\n",
+    "agentEval.loadModel('./')\n",
     "agentEval.evalMode()\n"
    ]
   },
@@ -3492,28 +3463,6 @@
     "#         RR.append(R*Iter)\n",
     "#         observation = newEnv.reset() \n",
     "# print(np.max(RR))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "4605952c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Rendering frames: 100%|███████████████████████| 287/287 [00:16<00:00, 17.39it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "camera_xyzrpy = ([5.0, 2.0, 1.0], [np.pi/2, 0.0, np.pi/1.5])\n",
-    "newEnv.env.simulator.stop()\n",
-    "newEnv.env.simulator.replay(camera_xyzrpy=camera_xyzrpy,record_video_path = '/home/linghao/Desktop/ANYmal_tt3.mp4')\n",
-    "newEnv.simulator.close()\n",
-    "newEnv.env.close()"
    ]
   },
   {
