--- a/src/TD3AgentForGymAnt_5000.ipynb
+++ b/src/TD3AgentForGymAnt_5000.ipynb
@@ -446,7 +446,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "1137ec4a",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -509,7 +511,7 @@
     "rewardAvg = []\n",
     "replayMemorySize = 5000\n",
     "printE = 250\n",
-    "path = '/home/linghao/Desktop/'\n",
+    "path = './'\n",
     "updateStart = 1000\n",
     "policyDelay = 3\n",
     "## Initialise TD3 agent\n",
@@ -623,7 +625,7 @@
     "                (totalNum, 256,128,actionNum), \n",
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "agent1.loadModel('/home/linghao/Desktop/')\n",
+    "agent1.loadModel('./')\n",
     "agent1.evalMode()\n",
     "\n",
     "\n",
@@ -715,28 +717,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "05b238ce",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['/home/linghao/Desktop/reward_ant_5000.pkl']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import joblib\n",
-    "joblib.dump([trackR, avgR], '/home/linghao/Desktop/reward_ant_5000.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "ebd5ce4d",
    "metadata": {},
@@ -773,12 +753,11 @@
     "                (totalNum, 128, actionNum, 1), \n",
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "agentEval.loadModel('/home/linghao/Desktop/')\n",
+    "agentEval.loadModel('./')\n",
     "agentEval.evalMode()\n",
     "\n",
     "\n",
     " \n",
-    "# video_recorder = VideoRecorder(newEnv, '/home/linghao/Desktop/Ant.mp4', enabled=True)\n",
     "\n",
     "R = 0\n",
     "\n",
@@ -848,7 +827,7 @@
     "                (totalNum, 256,128,actionNum), \n",
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "agent1.loadModel('/home/linghao/Desktop/TD3_V2/')\n",
+    "agent1.loadModel('./')\n",
     "agent1.evalMode()\n",
     "\n",
     "## Agent of architecture 1 for evaluation\n",
@@ -857,7 +836,7 @@
     "                (totalNum, 128, actionNum, 1), \n",
     "                actorLRate = 0.0001, criticLRate = 0.0001, criticLoss = 'HL', gamma = 0.95, targetUpdaterLRate = 0.05,\n",
     "                replayMemorySize = replayMemorySize, gpu=gpu, batchSize=batchSize, policyDelay = policyDelay)\n",
-    "agent2.loadModel('/home/linghao/Desktop/TD3_ANT_1_Q/')\n",
+    "agent2.loadModel('./')\n",
     "agent2.evalMode()\n",
     "\n",
     "## Performance of 200 iteration\n",
